fix gap handling, hide series hover point when in a gap

--- a/src/uPlot.css
+++ b/src/uPlot.css
@@ -25,6 +25,7 @@
 
 .plot {
 	outline: 1px solid silver;
+	overflow-y: hidden;
 }
 
 .chart canvas {
